src/test/deca/context/invalid/renduInter01/00EXCLAM_type_incompatible.deca
// Description:
//    test de programme incorrect au niveau du typage (expression "not" applicable sur un booléen seulement)
//
// Resultats:
//    Erreur contextuelle
//    Ligne 10 : incompatible type

{
    string x = "hello";
    if ( !x ) {
        println("ok");
    }
}
